# supabase_rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  RPC_DESIGN.md  RPC_DESIGN_V2.md  count.py  test.json  test.py  todo.md
.github/workflows/: release.yml  rust.yml
auth/: Cargo.toml  README.md
auth/src/: delete_user.rs  error.rs  get_user.rs  lib.rs  logout.rs  refresh_token.rs  signin_with_password.rs  signout.rs  signup.rs  util.rs
auth/src/models/: user.rs
auth/tests/: signup_signin_signout.rs
docs/: RPC.md
src/: delete.rs  errors.rs  insert.rs  lib.rs  main.rs  nightly.rs  query.rs  rpc.rs  search.rs  select.rs  success.rs  supabase_types.rs  type_gen.rs  update.rs
src/graphql/: client.rs  error_types.rs  mod.rs  parse.rs  query.rs  request.rs
src/graphql/parsing/: mod.rs
src/graphql/utils/: format_endpoint.rs  headers.rs  mod.rs
src/query_builder/: builder.rs  filter.rs  mod.rs
src/realtime/: mod.rs
src/request/: headers.rs  mod.rs
src/routing/: id.rs
src/storage/: download.rs  mod.rs
src/tests/: base.rs  mod.rs  readme.md  setup_rpc.sql
src/tests/methods/: bulk_insert.rs  delete.rs  init.rs  insert.rs  insert_if_unique_numeric.rs  insert_if_unique_string.rs  insert_numeric.rs  insert_string.rs  query.rs  rpc.rs  schema_tests.rs  select.rs  select_filter.rs  select_first.rs  select_single.rs  select_stacked_queries.rs  select_with_columns.rs  select_with_count.rs  select_with_count_and_filter.rs  unit_filters_and_sort.rs  unit_query_build.rs  unit_utils.rs  update_with_column.rs  upsert_numeric.rs  upsert_string.rs
supabase/: Cargo.toml
supabase/src/: delete.rs  errors.rs  insert.rs  lib.rs  select.rs  success.rs  type_gen.rs  update.rs
supabase/src/auth/: delete_user.rs  get_user.rs  logout.rs  mod.rs  signup.rs  util.rs
supabase/src/auth/models/: token.rs
supabase/src/graphql/: query.rs
supabase/src/graphql/parsing/: mod.rs
supabase/src/graphql/utils/: headers.rs  mod.rs
supabase/src/query_builder/: filter.rs  sort.rs
supabase/src/realtime/: mod.rs
supabase/src/request/: headers.rs
supabase/src/routing/: id.rs
supabase/src/storage/: download.rs  mod.rs
supabase/src/tests/: mod.rs
supabase/src/tests/auth/: mod.rs
supabase/src/tests/methods/: delete.rs  init.rs  insert_if_unique_string.rs  insert_numeric.rs  insert_string.rs  select_filter.rs  select_stacked_queries.rs  select_with_count_and_filter.rs  upsert_numeric.rs  upsert_string.rs
