[package]
name = "supabase_rs"
version = "0.4.1"
edition = "2021"
authors = ["Floris floris@xylex.ai"]
description = "Lightweight Rust client for Supabase REST and GraphQL"
license = "MIT"
readme = "README.md"
repository = "https://github.com/floris-xlx/supabase_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", default-features = false, features = ["gzip", "json"] }
rand = "0.8.5"
serde_json = "1.0.111"
dotenv = "0.15.0"
anyhow = "1.0.86"
regex = { version = "1.10.5", optional = false }
serde = "1.0.204"
thiserror = "1.0.63"


[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["native_tls"]
nightly = []
storage = []
rustls = ["reqwest/rustls-tls"]
native_tls = ["reqwest/native-tls"]

# default = ["nightly", "storage"]
# # 
# # 
# realtime = []
