[package]
name = "supabase_rs"
version = "0.5.1"
edition = "2021"
authors = ["Floris floris@xylex.ai"]
description = "Lightweight Rust client for Supabase REST and GraphQL"
license = "MIT"
readme = "README.md"
repository = "https://github.com/floris-xlx/supabase_rs"
# tests should not be included in the published package
exclude = ["src/tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["gzip", "json"] }
rand = "0.9.0"
serde_json = "1.0.111"
dotenv = "0.15.0"
anyhow = "1.0.86"
regex = { version = "1.10.5", optional = false }
serde  = { version = "1.0.196", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["full"] }
postgres = "0.19.10"
tokio-postgres = "0.7.13"
uuid = { version = "1.16.0", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
rust_decimal = "1.36.0"
cruet = "0.15.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["native_tls", "nightly"]
nightly = []
storage = []
rustls = ["reqwest/rustls"]
native_tls = ["reqwest/native-tls"]

# default = ["nightly"]
# # 
# # 
# realtime = []

[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
# pedantic = "warn" # Maybe Enable later
# nursery = "warn" # Maybe Enable later

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
# expect_used = "warn" # Enable later
missing_assert_message = "warn"
panic_in_result_fn = "warn"
str_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"