[package]
name = "supabase_rs"
version = "0.5.1"
edition = "2021"
authors = ["Floris floris@xylex.ai"]
description = "Lightweight Rust client for Supabase REST and GraphQL"
license = "MIT"
readme = "README.md"
repository = "https://github.com/floris-xlx/supabase_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["gzip", "json"] }
rand = "0.9.0"
serde_json = "1.0.111"
dotenv = "0.15.0"
anyhow = "1.0.86"
regex = { version = "1.10.5", optional = false }
serde  = { version = "1.0.196", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["full"] }
postgres = "0.19.10"
tokio-postgres = "0.7.13"
uuid = { version = "1.16.0", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
rust_decimal = "1.36.0"
cruet = "0.15.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["native_tls", "nightly"]
nightly = []
storage = []
rpc = []
rustls = ["reqwest/rustls"]
native_tls = ["reqwest/native-tls"]

# default = ["nightly"]
# #
# #
# realtime = []
