[package]
name = "supabase_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
rand.workspace = true
serde_json.workspace = true
dotenv.workspace = true
anyhow.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true

[features]
default = ["native_tls", "nightly"]
nightly = []
storage = []
rustls = ["reqwest/rustls-tls"]
native_tls = ["reqwest/native-tls"]

# default = ["nightly"]
# # 
# # 
# realtime = []
